--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-.goodslist {
+.goodsList {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
   height: 1.4em;
 }
 
-.gooditem {
+.goodItem {
   margin: 5px;
   padding: 5px;
   flex: 0 1 auto;
