second task version 1

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,3 @@
-.goodsPage {
-  font-family: Tahoma;
-}
-
-.header,
-.goodsList {
-  margin: 2% auto;
-  width: 20%;
+.productsPage {
+	font-family: Tahoma;
 }
