--- a/src/components/FormFilter/index.css
+++ b/src/components/FormFilter/index.css
@@ -1,9 +1,9 @@
 .formFilter {
-	margin: 4% auto;
-	max-width: 40%;	
-	font-family: Tahoma;
+  margin: 4% auto;
+  max-width: 40%;
+  font-family: Tahoma;
 }
 
-.formFilter INPUT {
-	width: 7em;
+.formFilter .inputPrice {
+  width: 7em;
 }
