--- a/src/containers/Paginator/index.css
+++ b/src/containers/Paginator/index.css
@@ -1,6 +1,6 @@
 .paginator {
   margin: 4% auto;
-  width: 30%;
+  width: 50%
 }
 
 .paginator__item {
@@ -13,6 +13,7 @@
   background-color: white;
   color: blue;
   line-height: 2rem;
+  margin: 0;
 }
 
 .paginator__item-active {
@@ -25,4 +26,18 @@
   background-color: blue;
   color: white;
   line-height: 2rem;
+  margin: 0;
+}
+
+.paginator__buttonlimit {
+  display: inline-block;
+  height: 2rem;
+  width: 5rem;
+  border: 1px solid blue;
+  text-align: center;
+  text-decoration: none;
+  background-color: blue;
+  color: white;
+  line-height: 2rem;
+  margin: 0;
 }
