--- a/src/components/ProductPage/index.module.css
+++ b/src/components/ProductPage/index.module.css
@@ -3,10 +3,11 @@
   color: #323c48;
   text-decoration: none;
   position: relative;
-  justify-content: space-between;
+
   display: flex;
   flex-direction: column;
-  width: 600px;
+  align-items: center;
+  width: 80%;
   margin: 10% auto;
 }
 
@@ -15,24 +16,20 @@
 }
 
 .goodCard {
-	display: flex;
-	flex-direction: row;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;	
 }
 
-.goodImgCard {
-	width: 224px;
-	height: 200px;	
-}
-
-.goodData {
-	width: 224px;
-	height: 200px;	
+.goodImgCard, .goodData {
+	width: 15rem;
+	height: 15rem;	
 }
 
 .goodsType {
   color: #41ce7f;
   font-size: 12px;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   background-color: #fff;
@@ -42,6 +39,7 @@
   padding-right: 11px;
   padding-bottom: 15px;
   padding-left: 12px;
+  width: 50%
 }
 
 .goodsTypeNone {
@@ -58,14 +56,23 @@
 }
 
 .goodsName {
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 1.8rem;
+  line-height: 2.2rem;
+  height: 2rem;
+  width: 40%;
+  text-align: center
 }
 
 .goodsPrise {
-  font-weight: 900;
+  font-weight: 400;
   font-size: 1.2rem;
   line-height: 1.2;
   margin-top: 8px;
 }
 
+.linkBack {
+	font-size: 1.6rem;
+	color: black;
+	text-decoration: none;
+	line-height: 2.2rem;
+}
