--- a/src/containers/Paginator/index.css
+++ b/src/containers/Paginator/index.css
@@ -16,7 +16,7 @@
   margin: 0;
 }
 
-.paginator__link .selected {
+.paginator__link .activ {
   display: inline-block;
   height: 2rem;
   width: 2rem;
