--- a/src/components/Categories/index.css
+++ b/src/components/Categories/index.css
@@ -2,7 +2,7 @@
   margin: 2% auto;
   width: 80%;
   border: 1px solid blue;
-  text-align: center; 
+  text-align: center;
   padding: 0% 5% 5%;
 }
 
@@ -21,7 +21,7 @@
   padding: 5%;
 }
 
-.categories__link.activ {
+.categories .activ {
   color: white;
   background-color: blue;
 }
