--- a/src/components/InfoPage/index.css
+++ b/src/components/InfoPage/index.css
@@ -1,4 +1,15 @@
-.productEmptyPage {
+.infoPage {
   margin: 10% auto;
   width: 80%;
+  font-family: "Open Sans", Georgia, Serif;
+  text-align: center;
+  color: gray;
+}
+
+.infoPage__title {
+  font-size: 1.4rem;
+}
+
+.infoPage__message {
+  font-size: 1.2rem;
 }
