--- a/src/components/ProductPage/index.css
+++ b/src/components/ProductPage/index.css
@@ -11,23 +11,23 @@
   margin: 10% auto;
 }
 
-.goodsNone {
+.goods-none {
   color: #7e8fa4;
 }
 
-.goodCard {
+.goods__card {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
 }
 
-.goodImgCard,
-.goodData {
+.goods__imgCard,
+.goods__data {
   width: 15rem;
   height: 15rem;
 }
 
-.goodsType {
+.goods__type {
   color: #41ce7f;
   font-size: 12px;
   position: relative;
@@ -43,20 +43,20 @@
   width: 50%;
 }
 
-.goodsTypeNone {
+.goods__type-none {
   background-color: #f5f6fa;
   color: #7e8fa4;
 }
 
-.goodsImg {
+.goods__img {
   box-shadow: 0 4px 8px 0 rgba(50, 60, 72, 0.1);
 }
 
-.goodsImgNone {
+.goods__img-none {
   opacity: 0.5;
 }
 
-.goodsName {
+.goods__name {
   font-size: 1.3rem;
   line-height: 1.6rem;
   height: 1.6rem;
@@ -65,14 +65,14 @@
   text-align: center;
 }
 
-.goodsPrise {
+.goods__prise {
   font-weight: 400;
   font-size: 1.2rem;
   line-height: 1.2;
   margin-top: 8px;
 }
 
-.linkBack {
+.goods__linkBack {
   font-size: 1.6rem;
   color: black;
   text-decoration: none;
