--- a/src/components/Categories/index.css
+++ b/src/components/Categories/index.css
@@ -1,7 +1,4 @@
 .categories {
-  margin: 2% auto;
-  width: 80%;
-  border: 1px solid blue;
   text-align: center; 
   padding: 0% 5% 5%;
 }
@@ -14,14 +11,18 @@
 
 .categories__link {
   display: inline-block;
-  border: 1px solid blue;
-  color: blue;
+  height: 0.8rem;
+  line-height: 0.8rem;
+  margin: 0.2rem;
+  border: 1px solid black;
+  color: black;
   background-color: white;
   text-decoration: none;
   padding: 5%;
+  border-radius: 1.6rem;
 }
 
 .categories__link.activ {
   color: white;
-  background-color: blue;
+  background-color: black;
 }
