--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,4 +1,6 @@
 .header {
-  margin: 2% auto;
-  width: 40%;
+  text-align: center;
+  font-family: "Open Sans", Georgia, Serif;
+  font-size: 1.4rem;
+  color: gray;
 }
