--- a/src/components/InputNumber/index.css
+++ b/src/components/InputNumber/index.css
@@ -1,3 +1,10 @@
 .inputNumber {
-  width: 7em;
+  width: 3rem;
+  font-size: 14px;
+  margin-left: 8px;
+  margin-right: 8px;
+  height: 30px;
+  border: solid 1px #7e8fa4;
+  padding-left: 16px;
+  padding-right: 16px;  
 }
