--- a/src/components/ResetButton/index.css
+++ b/src/components/ResetButton/index.css
@@ -1,15 +1,15 @@
 .resetBlock {
-  margin: 2% auto;
-  width: 80%;
   text-align: center;  
 }
 
 .resetBlock__resetLink {
   display: inline-block;
-  width: 60%;
-  padding: 5%;
-  border: 1px solid blue;
-  color: blue;
+  height: 0.8rem;
+  line-height: 0.8rem;
+  margin: 0.2rem;
+  border: 1px solid black;
+  color: black;
   background-color: white;
   text-decoration: none;
+  padding: 5%;
 }
