--- a/src/containers/FormFilter/index.css
+++ b/src/containers/FormFilter/index.css
@@ -1,5 +1,10 @@
 .formFilter {
-  margin: 4% auto;
-  max-width: 40%;
-  font-family: Tahoma;
+  padding: 0.4rem;
+}
+
+.formFilter__labelPrice {
+  font-family: OpenSans, sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  color: #323c48;
 }
