--- a/src/containers/Paginator/index.css
+++ b/src/containers/Paginator/index.css
@@ -1,10 +1,10 @@
 .paginator {
-  margin: 4% auto;
-  width: 50%;
+  margin: 3rem auto;
+  display: flex;
+  justify-content: center;
 }
 
 .paginator__link {
-  display: inline-block;
   height: 2rem;
   width: 2rem;
   border: 1px solid blue;
@@ -17,7 +17,6 @@
 }
 
 .paginator__link.activ {
-  display: inline-block;
   height: 2rem;
   width: 2rem;
   border: 1px solid blue;
