--- a/src/components/ProductsList/index.css
+++ b/src/components/ProductsList/index.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  padding: 2%
+  padding: 2%;
 }
 
 .productsList__cardProduct {
