--- a/src/components/EmptyProductPage/index.css
+++ b/src/components/EmptyProductPage/index.css
@@ -15,8 +15,11 @@
 }
 
 .emptyPage__linkBack {
+  border: 0px;
+  background-color: white;
   font-size: 1.6rem;
   color: black;
   text-decoration: none;
   line-height: 2.2rem;
+  cursor: pointer;
 }
