--- a/src/components/ProductPage/index.css
+++ b/src/components/ProductPage/index.css
@@ -73,8 +73,11 @@
 }
 
 .goods__linkBack {
+  border: 0px;
+  background-color: white;
   font-size: 1.6rem;
   color: black;
   text-decoration: none;
   line-height: 2.2rem;
+  cursor: pointer;
 }
