--- a/src/containers/Cart/index.css
+++ b/src/containers/Cart/index.css
@@ -14,22 +14,40 @@
   font-family: OpenSans, sans-serif;
   font-size: 20px;
   font-weight: 200;
-  color: #323c48;	
+  color: #323c48;
 }
 
 .cart__counter {
-  font-family: OpenSans, sans-serif;
   font-size: 1rem;
   font-weight: 600;
   color: gray;
-  padding: 1rem;  
+  padding: 1rem;
 }
 
 .cart_buttonDispatch {
   height: 2rem;
-  width: 5rem;
+  width: 90%;
   border: 1px solid black;
   background-color: white;
+  margin: 0.5rem;
+  font-size: 1rem;
 }
 
+.cart_buttonClear {
+  height: 2rem;
+  width: 90%;
+  border: 1px solid red;
+  background-color: white;
+  margin: 0.5rem;
+  font-family: OpenSans, sans-serif;
+  font-size: 1rem;
+}
 
+.cart_buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  font-family: OpenSans, sans-serif;
+  padding: 0.4rem;
+}
