--- a/src/containers/Cart/index.css
+++ b/src/containers/Cart/index.css
@@ -10,9 +10,21 @@
   height: 2rem;
 }
 
+.cart__svgElement {
+  height: 1rem;
+  width: 1rem;
+  margin: 0 0.5rem;
+}
+
+.done__svgElement {
+  height: 1rem;
+  width: 1rem;
+  margin: 0 0.2rem;
+}
+
 .cart__label {
   font-family: OpenSans, sans-serif;
-  font-size: 20px;
+  font-size: 1.2rem;
   font-weight: 200;
   color: #323c48;
 }
@@ -21,7 +33,7 @@
   font-size: 1rem;
   font-weight: 600;
   color: gray;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .cart_buttonDispatch {
