--- a/src/components/ResetButton/index.css
+++ b/src/components/ResetButton/index.css
@@ -1,16 +1,20 @@
 .resetBlock {
-  text-align: center;  
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .resetBlock__resetLink {
-  display: inline-block;
+  display: block;
   height: 0.8rem;
   width: 10rem;
   line-height: 0.8rem;
-  margin: 0.2rem;
+  margin: 1rem;
   border: 1px solid black;
   color: black;
   background-color: white;
   text-decoration: none;
   padding: 5%;
+  text-align: center;
 }
