--- a/src/containers/CatalogPage/index.css
+++ b/src/containers/CatalogPage/index.css
@@ -2,6 +2,8 @@
   max-width: 1200px;
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
+  width: 90%;
 }
 
 .catalogPage__headerSection {
@@ -15,15 +17,32 @@
 }
 
 .catalogPage__filterSection {
- flex: 0 0 15%;
+  flex: 0 0 15%;
 }
 
 .catalogPage__goodsSection {
- flex: 0 1 62%;
- min-width: 400px;
+  flex: 0 1 62%;
+  min-width: 600px;
 }
 
 .catalogPage__cartSection {
- flex: 0 0 15%;
- min-width: 150px;
+  flex: 0 0 15%;
+}
+
+@media (max-width: 900px) {
+  
+  .catalogPage__mainSection {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+  }
+
+  .catalogPage__filterSection {
+    width: 60%;
+  }
+
+  .catalogPage__cartSection {
+    order: -1;
+  }
+
 }
