--- a/src/containers/Paginator/index.css
+++ b/src/containers/Paginator/index.css
@@ -27,3 +27,15 @@
   line-height: 2rem;
   margin: 0;
 }
+
+.paginator__buttonlimit {
+  display: inline-block;
+  height: 2rem;
+  width: 5rem;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  line-height: 2rem;
+  margin: 0;
+}
+
