--- a/src/containers/Cart/index.css
+++ b/src/containers/Cart/index.css
@@ -29,11 +29,24 @@
   color: #323c48;
 }
 
+.cart__data {
+  height: 5rem;
+}
+
 .cart__counter {
   font-size: 1rem;
   font-weight: 600;
   color: gray;
   padding: 0.5rem;
+  margin: 0;
+}
+
+.cart__price {
+  font-size: 1rem;
+  font-weight: 600;
+  color: gray;
+  padding: 0.5rem;
+  margin: 0;
 }
 
 .cart_buttonDispatch {
